@@ -37,14 +37,7 @@ namespace MonoDevelop.Commands
 	{
 		public override void Run()
 		{
-			using (NewFileDialog nfd = new NewFileDialog()) {
-				nfd.Run ();
-				nfd.Hide ();
-				if (WorkbenchSingleton.Workbench.ActiveWorkbenchWindow != null)
-				{
-					WorkbenchSingleton.Workbench.ActiveWorkbenchWindow.SelectWindow();
-				}
-			}
+			NewFileDialog nfd = new NewFileDialog ();
 		}
 	}
 	
